_layouts/style.css
/* ... */
@media(min-width:{{site.data.template.media.wide-desktop}}) {
	header .intro-text {
        padding-top: {{site.data.template.header.intro.text.padding-top-wide-desktop}}
    }
	header .intro-text .intro-heading {
        font-size: {{ site.data.template.header.intro.heading.font-size-wide-desktop}};
		line-height: {{ site.data.template.header.intro.heading.line-height-wide-desktop}};
    }
}

section#contact h3.section-subheading {
    margin-bottom: 30px;
    color: #{{ site.data.template.color.light }};
}

section#contact {
    background-color: #{{ site.data.template.color.bg-darkest-gray }};
}

#portfolio .portfolio-item .portfolio-caption p {
    /* font was serif and italic */
    font-family: {{ site.data.template.font.body }};
    font-size: {{ site.data.template.font.p-size }};
    font-style: inherit;
    margin: 0 0 20px;
}
#portfolio .portfolio-item .portfolio-caption h4 {
    margin: 0 0 10px;
}
/* test of a different portfolio caption style
	.portfolio-cap { position: absolute; z-index: 2; bottom: 20px; left: 0; color: #fff; padding: 4px 10px; background: #000; opacity: 0.7; } */


#portfolio .portfolio-item .portfolio-link .portfolio-hover {
    position: absolute;
    width: 100%;
    height: 100%;
 	opacity: 0;
    -webkit-transition: all ease .35s;
    -moz-transition: all ease .35s;
    transition: all ease .35s;
	background: rgba(5,56,97,.9); /* Fallback for no hex_to_rgb plugin */
    background: rgba({{ site.data.template.color.primary | hex_to_rgb | join: ',' }}, .9);
}

#portfolio .portfolio-item .portfolio-link .portfolio-hover:hover {
    opacity: 0.6;
}

.timeline {
    padding: 10px;
}

.timeline h4 {
    margin: 0 0 15px;
 }
 
.timeline>li .timeline-image {
    border: 7px solid #f1f1f1;
    border-radius: 100%;
    text-align: center;
    color: #fff;
    background-color: #{{ site.data.template.color.primary }};
}

@media(min-width:992px) {
	.timeline>li .timeline-image h4 {
        font-size: {{ site.data.template.font.large }};
    }
}
.list-inline>li {
    padding-left: 25px;
    padding-right: 25px;
    padding-top: 10px;
    padding-bottom: 10px;
}
ul.social-buttons li a {
    background-color: #{{ site.data.template.color.bg-darkest-gray }};
}

ul {
    display: inline-block;
}

ul.social-but-img li a {
    display: inline-block;
    width: 40px;
    height: 40px;
    border-radius: 100%;
    font-size: 20px;

    -webkit-transition: all .3s;
    -moz-transition: all .3s;
    transition: all .3s;
}

.img-iconimg {
    width: 40px;
    height: 40px;
    max-width:100%;
}

.address {
    margin: 0 10px 0;
}

/* fixed or not both look ok */
.portfolio-modal .close-modal {
    position: fixed;
}
.portfolio-modal .modal-content p.item-intro {
    font-size: {{ site.data.template.font.p-size }};
}
.portfolio-modal .close-modal .lr {
    background-color: #{{ site.data.template.color.bg-darkest-gray }};
}
.portfolio-modal .close-modal .lr .rl {
    background-color: #{{ site.data.template.color.bg-darkest-gray }};
}

.portfolio-modal .modal-content h2 {
    font-size: 2em;
    margin-bottom: 30px;
}
.portfolio-modal .modal-content img {
    margin-bottom: 50px;
}
.portfolio-modal .modal-content .modal-description {
    width: 80%;
    margin: auto;
    text-align: justify;
}

/* separate close 'x' from text a little */
.modal-body .btn i {
    margin-right: 5px;
}

.row {
    margin-left: auto;
    margin-right: auto;
}

.img-padded {
    padding: 20px 15px;
}

{{ content }}

